start of keyword guideline changes

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -403,6 +403,7 @@
 <link href="#rfc.section.14" rel="Chapter" title="14 Acknowledgements"/>
 <link href="#rfc.section.15" rel="Chapter" title="15 IANA Considerations"/>
 <link href="#rfc.references" rel="Chapter" title="16 Normative References"/>
+<link href="#rfc.appendix.A" rel="Chapter" title="A JSON Formatting Guidelines"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -411,7 +412,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.2" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-8-9" />
+  <meta name="dct.issued" scheme="ISO8601" content="2016-8-24" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -432,10 +433,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">August 9, 2016</td>
+  <td class="right">August 24, 2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: February 10, 2017</td>
+  <td class="left">Expires: February 25, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -456,7 +457,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 10, 2017.</p>
+<p>This Internet-Draft will expire on February 25, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -497,6 +498,7 @@
 <li>14.   <a href="#rfc.section.14">Acknowledgements</a></li>
 <li>15.   <a href="#rfc.section.15">IANA Considerations</a></li>
 <li>16.   <a href="#rfc.references">Normative References</a></li>
+<li>Appendix A.   <a href="#rfc.appendix.A">JSON Formatting Guidelines</a></li>
 <li><a href="#rfc.authors">Author's Address</a></li>
 
 
@@ -630,7 +632,7 @@
 <p id="rfc.section.9.p.1">The version of the ACVP protocol will be carried with each message and will contain a simple major.minor format.  Major version changes will not be backward compatible, however additions and enhancements that do not disrupt compatibility will be indicated with a minor version change.  A server may accept a down-level version from the client if it can process at a lower level.  If not, it will reject the session.  All subsequent messages will carry the negotiated version value.</p>
 <h1 id="rfc.section.10"><a href="#rfc.section.10">10.</a> Messaging</h1>
 <h1 id="rfc.section.10.1"><a href="#rfc.section.10.1">10.1.</a> Product Registration/Capabilities Exchange</h1>
-<p id="rfc.section.10.1.p.1">The product registration message will include many of the normal cryptographic algorithm identification line items that are found when filling out a testing form. This pre-test message will carry the Company name, primary contact (OE information) as well as a detailed list of the supported cryptographic algorithms to be tested during a session.  The server will return the vector test list to the client.  It will consist of a list of vector set IDs (vs_id) each of which represent a set of test vectors which can be used to request the test vectors at a later time.</p>
+<p id="rfc.section.10.1.p.1">The product registration message will include many of the normal cryptographic algorithm identification line items that are found when filling out a testing form. This pre-test message will carry the Company name, primary contact (OE information) as well as a detailed list of the supported cryptographic algorithms to be tested during a session.  The server will return the vector test list to the client.  It will consist of a list of vector set IDs (vsId) each of which represent a set of test vectors which can be used to request the test vectors at a later time.</p>
 <h1 id="rfc.section.10.2"><a href="#rfc.section.10.2">10.2.</a> KAT Exchange</h1>
 <p id="rfc.section.10.2.p.1">The KAT exchange consists of the ACV client requesting a particular set of vectors selected from the vector test list.  The server responds with the test vectors.  Once the client has run the vectors the response data will be returned to the server for processing.  The client will repeat this process until all of the tests in the session test list have been processed.  The client may request results from the server at any time, however if test sets have not been completed the overall status will be incomplete.</p>
 <h1 id="rfc.section.11"><a href="#rfc.section.11">11.</a> Message Formats</h1>
@@ -642,7 +644,7 @@
         +-------------------------------------------+
              server        service path       
         +---------------+------------------------------+
-  www://my-acpserver.com:123/validation/acvp/vectors?vs_id=1
+  www://my-acpserver.com:123/validation/acvp/vectors?vsId=1
   +-+   +---------------++-++----------++--------------+ 
  scheme      server      port  service     vector file 1
 
@@ -708,7 +710,7 @@ eyJhbGciOiJIUzI1NiIsI.eyJpc3MiOiJodHRwczotcGxlL.mFrs3Zo8eaSNcxiNfvRh9dqKP4F1cB,
 Once the session is established the client must include the JWT with 
 each message.
 
-GET /validation/acvp/ vectors?vs_id=1  HTTP1.1
+GET /validation/acvp/ vectors?vsId=1  HTTP1.1
 User Agent: acvp-client/0.2
 Host: www.my-acvpserver.com
 Authorization: Bearer JWT
@@ -727,46 +729,46 @@ Host: www.my-acvpserver.com
 Accept: 
 {
 "operation" : "register",
-"acv_version" : "0.2",
-"certificate_request" : "yes",
-"oe_information" : {
-"vendor_name" : "Cisco",
-"vendor_url" : "www.cisco.com",
+"acvVersion" : "0.2",
+"certificateRequest" : "yes",
+"oeInformation" : {
+"vendorName" : "Cisco",
+"vendorURL" : "www.cisco.com",
 "contact" : "John Doe",
-"contact_email" : "johndoe@cisco.com",
-"module_name" : "Cisco ACV Test Module 1.0",
-"module_type" : "Software",
-"operational_environment" : {
-"module_version" : "1.0",
+"contactEmail" : "johndoe@cisco.com",
+"moduleName" : "Cisco ACV Test Module 1.0",
+"moduleType" : "Software",
+"operationalEnvironment" : {
+"moduleVersion" : "1.0",
 "processor" : "Intel Woodcrest",
-"operating_system" : "Linux 3.1
+"operatingSystem" : "Linux 3.1
      },
      "implementation_description" : 
           "Sample crypto module for demonstrating ACV protocol."
      },
-"capability_exchange" : {
+"capabilityExchange" : {
 "algorithms" : [
          {
 "algorithm" : "AES-GCM",
 "mode" : "both",
-"iv_gen" : "internal",
-"iv_gen_mode" : "8.2.1",
-"key_lens" : [
+"ivGen" : "internal",
+"ivGenMode" : "8.2.1",
+"keyLens" : [
             128,
             256
              ],
-"tag_lens" : [
+"tagLens" : [
             96
                ],
-"iv_lens" : [
+"ivLens" : [
             96
                ],
-"pt_lens" : [
+"ptLens" : [
             0,
             128,
             136
                ],
-"aad_lens" : [
+"aadLens" : [
             128,
             136
                ]
@@ -783,11 +785,11 @@ Accept:
 200 OK Response:
 { 
 "version" : "0.2", 
-"capability_response" : { "vector_sets" : [
-                        {"vs_id":1437},
-                        {"vs_id":1438}] } , 
-"test_session" :        {"test_id":458} , 
-"access_token" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiAibmlzdC5vcmciLCJleHAiOiAxNDYyOTg0OTUzLCJjb21wYW55IjogIkNpc2NvIiwianRpIjo0NTh9.zDhd3WrLcb1Xf5-VKOX6k-G70mACbi1tdir8qHAMPyQ" 
+"capabilityResponse" : { "vectorSets" : [
+                       {"vsId":1437},
+                       {"vsId":1438}] } , 
+"testSession" :       {"testId":458} , 
+"accessToken" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiAibmlzdC5vcmciLCJleHAiOiAxNDYyOTg0OTUzLCJjb21wYW55IjogIkNpc2NvIiwianRpIjo0NTh9.zDhd3WrLcb1Xf5-VKOX6k-G70mACbi1tdir8qHAMPyQ" 
 }
            </pre>
 <p class="figure">Figure 8</p>
@@ -798,10 +800,10 @@ Accept:
 <pre>
 {
 "version" : "0.2",
-"capability_response" : {          
-       "vector_sets" :[{"vs_id" :930}],
-       "test_session" :{"test_id" :183}, 
-"access_token" :eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiAibmlzdC5vcmciLCJleHAiOiAxMjMwMTIwLCJjb21wYW55IjogIkNpc2NvIiwianRpIjoxODN9.h1tQALiupn_Jx4UWPPTjFNeY9Wu7DI8bWkbh8Xt0GCr3DYf2J_FzoGwlPnUBuPR63kIN0HmKPrlv6r8Ykb1JeA
+"capabilityResponse" : {          
+       "vectorSets" :[{"vsId" :930}],
+       "testSession" :{"testId" :183}, 
+"accessToken" :eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiAibmlzdC5vcmciLCJleHAiOiAxMjMwMTIwLCJjb21wYW55IjogIkNpc2NvIiwianRpIjoxODN9.h1tQALiupn_Jx4UWPPTjFNeY9Wu7DI8bWkbh8Xt0GCr3DYf2J_FzoGwlPnUBuPR63kIN0HmKPrlv6r8Ykb1JeA
     }
 }
 
@@ -838,12 +840,13 @@ Content-Length: &lt;length of results&gt;
 {
 "version" : "0.2",
 "results" : {
-"disposition" : "incomplete",
-12340 : "passed", 
-12341 : "passed",      
-12342 : "passed",
-12343 : "incomplete",
-12344 : "passed"
+    "disposition" : "incomplete",
+    "tests" : [
+	    { "tcId" : 12340, "result" : "passed" },
+            { "tcId" : 12341, "result" : "passed" },
+            { "tcId" : 12342, "result" : "incomplete" },
+            { "tcId" : 12343, "result" : "passed" },
+              ]
    }
 } 
            </pre>
@@ -903,6 +906,13 @@ Authorization: Bearer JWT
     </tr>
   </tbody>
 </table>
+<h1 id="rfc.appendix.A"><a href="#rfc.appendix.A">Appendix A.</a> <a href="#app-reg-ex" id="app-reg-ex">JSON Formatting Guidelines</a></h1>
+<p id="rfc.section.A.p.1">All JSON keywords shall use lower camelCase format with no underscores or hyphens and use the following characters only a-z, A-Z, 0-9. Keywords shall abbreviate common words and phrases wherever possible for brevity.</p>
+<p id="rfc.section.A.p.2">For example: password length - pwLen plain text length - ptLen </p>
+<p id="rfc.section.A.p.3">Keywords should be chosen such that they are informative and brief, for example: </p>
+<p id="rfc.section.A.p.4">{ "acvVersion" : "0.2", "results" : { "disposition" : "incomplete", } </p>
+<p id="rfc.section.A.p.5">Metadata assigned to the keyword may use any format which best reflects the information being represented including hyphens, underscores alternating case, numbers, etc. However, brevity should be a major consideration, for example:</p>
+<p id="rfc.section.A.p.6">"algorithms" : [ { "algorithm" : "AES-GCM", "mode" : "modes", "ivGen" : "internal", "ivGenMode" : "8.2.1", } All metadata representing strings or big numbers shall use double quotes at both ends.  Big numbers require conversion from strings to whatever format is used by the DUT.  Numerical values of integer size or with decimal points may use quotations if those values are generally used as a string, for example the acvVersion would generally be used in displaying information not in any mathematical operations.  Something like keyLen or ptLens values would be better used without quotes to avoid having to convert the string to an integer for use in the code.  </p>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
 </h1>
