--- a/artifacts/acvp_sub_kdf108.html
+++ b/artifacts/acvp_sub_kdf108.html
@@ -505,28 +505,28 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">kasval</td>
+      <td class="left">kasVal</td>
       <td class="left">The SP800-56 KAS validation number or implemented in "same" implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
-      <td class="left">drbgval</td>
+      <td class="left">drbgVal</td>
       <td class="left">The SP800-56 DRBG validation number or implemented in "same" implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
-      <td class="left">cmacval</td>
+      <td class="left">cmacVal</td>
       <td class="left">The CMAC validation number or implemented in "same" implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
-      <td class="left">hmacval</td>
+      <td class="left">hmacVal</td>
       <td class="left">The HMAC validation number or implemented in "same" implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
@@ -547,14 +547,14 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
-      <td class="left">L</td>
+      <td class="left">l</td>
       <td class="left">Length in bits of Ko keying material, 2 lengths evenly divisible by h, and if supported 2 that are not</td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">SP</td>
+      <td class="left">sp</td>
       <td class="left">List the SPs used to generate K</td>
       <td class="left">array</td>
       <td class="left">SP800-56A, SP800-56B, SP800-90A, N/A</td>
@@ -610,12 +610,12 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
@@ -625,14 +625,14 @@
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_groups</td>
+      <td class="left">testGroups</td>
       <td class="left">Array of test group JSON objects, which are defined in <a href="#tgjs">Section 3.1</a></td>
       <td class="left">array</td>
     </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <p id="rfc.section.3.1.p.2">The KDF test group for KDF108 is as follows:</p>
 <div id="rfc.table.3"/>
 <div id="vs_tg_table5"/>
@@ -695,19 +695,19 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">tc_id</td>
+      <td class="left">tcId</td>
       <td class="left">Unique numeric identifier for the test case</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">L</td>
+      <td class="left">l</td>
       <td class="left">Length of Ko keying material</td>
       <td class="left">array</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">KI</td>
+      <td class="left">ki</td>
       <td class="left">Key derivation key</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -729,17 +729,17 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_results</td>
+      <td class="left">testResults</td>
       <td class="left">Array of JSON objects that represent each test vector result, as defined by the tables below</td>
       <td class="left">array</td>
     </tr>
@@ -769,7 +769,7 @@
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">KO</td>
+      <td class="left">ko</td>
       <td class="left">The derived keying material output</td>
       <td class="left">value</td>
     </tr>
@@ -805,14 +805,14 @@
 
             {
                 "algorithm": "counterMode",
-                "kasval": "123456",
-                "drbgval": "123456",
-                "hmacval": "123456",
-                "cmacval": "123456",
+                "kasVal": "123456",
+                "drbgVal": "123456",
+                "hmacVal": "123456",
+                "cmacVal": "123456",
 		"methods" : ["CMAC-AES-128", "CMAC-AES-192", "CMAC-AES-256" ],
 		"r" : "8",
 		"L" : ["0", "256"],
-		"SP" : "SP800-90A",
+		"sp" : "SP800-90A",
 		"order" : "before",
 
             }
@@ -821,19 +821,19 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for SP800-108 KDF test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acv_version": "0.2",
-                  "vs_id": 1564,
+                  "acvVersion": "0.2",
+                  "vsId": 1564,
                   "algorithm": "counterMode",
-                  "test_groups": [
+                  "testGroups": [
                     {
                       "method": "CMAC-AES-128",
 		      "ctrLocation" : "before",
 		      "rLen" : 8,
                       "tests": [
                         {
-                          "tc_id": 2170,
-			  "L" : "128",
-			  "KI" : "dff1e50ac0b69dc40f1051d46c2b069c",
+                          "tcId": 2170,
+			  "l" : "128",
+			  "ki" : "dff1e50ac0b69dc40f1051d46c2b069c",
                         },
                       ]
                     },
@@ -844,14 +844,14 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for SP800-108 KDF test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acv_version": "0.2",
-                    "vs_id": 1564,
-                    "test_results": [
+                    "acvVersion": "0.2",
+                    "vsId": 1564,
+                    "testResults": [
                         {
-                            "tc_id": 2170,
+                            "tcId": 2170,
 			    "fixedInputDataByteLen" : "60",
 			    "fixedInputData" : "c16e6e02c5a3dcc8d78b9ac1306877761310455b4e41469951d9e6c2245a064b33fd8c3b01203a7824485bf0a64060c4648b707d2607935699316ea5",
-			    "KO" : "8be8f0869b3c0ba97b71863d1b9f7813",
+			    "ko" : "8be8f0869b3c0ba97b71863d1b9f7813",
                         }
                     ]
                 }
