more guideline changes

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -703,7 +703,7 @@ Status: 200 OK
 Content-Type: application/json
 Content-Length: (length of JWT)
 {
-access_token : 
+accessToken : 
 eyJhbGciOiJIUzI1NiIsI.eyJpc3MiOiJodHRwczotcGxlL.mFrs3Zo8eaSNcxiNfvRh9dqKP4F1cB,
 }
 
@@ -718,7 +718,7 @@ Authorization: Bearer JWT
 <p class="figure">Figure 6</p>
 <p id="rfc.section.11.1.p.2">The authentication mechanism will be defined by the server.</p>
 <h1 id="rfc.section.11.2"><a href="#rfc.section.11.2">11.2.</a> Product Registration with Capabilities</h1>
-<p id="rfc.section.11.2.p.1">POST the registration to the server consisting of the ACVP version, Operating Environment (OE), vector encoding, capabilities and any extensions. In addition, if an algorithm certificate is not desired for this registration populate the field "certificate_request"  with "no".</p>
+<p id="rfc.section.11.2.p.1">POST the registration to the server consisting of the ACVP version, Operating Environment (OE), vector encoding, capabilities and any extensions. In addition, if an algorithm certificate is not desired for this registration populate the field "certificateRequest"  with "no".</p>
 <div id="rfc.figure.7"/>
 <div id="xml_json3"/>
 <pre>
@@ -743,7 +743,7 @@ Accept:
 "processor" : "Intel Woodcrest",
 "operatingSystem" : "Linux 3.1
      },
-     "implementation_description" : 
+     "implementationDescription" : 
           "Sample crypto module for demonstrating ACV protocol."
      },
 "capabilityExchange" : {
